[package]
name = "flat-bytes"
version = "0.1.1"
authors = ["bluec0re <coding@bluec0re.eu>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/bluec0re/threema-rs"
homepage = "https://github.com/bluec0re/threema-rs"
keywords = ["serializer"]
description = "A simple serialization format which converts enums and structs from and to bytes"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flat-bytes-derive = {version = "0.1", path = "../flat-bytes-derive"}
