[package]
name = "threema-cli"
version = "0.1.4"
authors = ["bluec0re <info@bluec0re.eu>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/bluec0re/threema-rs"
homepage = "https://github.com/bluec0re/threema-rs"
keywords = ["threema", "bot"]
description = "A threema.ch api client, based on o3ma"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threema = { version = "0.1", path = ".." }
pretty_env_logger = "0.4"
clap = "4.0.29"
log = "0.4"
